jilles      2006/01/19 21:35:55 UTC	(20060119-4597)
  Log:
  Add cmode +N (no notices/wallchops).
  

  Changes:	Modified:
  +1 -0		trunk/include/protocol/asuka.h (File Modified) 
  +1 -0		trunk/protocol/asuka.c (File Modified) 


jilles      2006/01/19 21:17:40 UTC	(20060119-4595)
  Log:
  P10: Add topic_sts().
  

  Changes:	Modified:
  +1 -1		trunk/protocol/asuka.c (File Modified) 
  +1 -1		trunk/protocol/bircd.c (File Modified) 
  +1 -1		trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 21:04:30 UTC	(20060119-4593)
  Log:
  P10: Improve the code to accept topics.
  

  Changes:	Modified:
  +23 -3	trunk/protocol/asuka.c (File Modified) 
  +23 -3	trunk/protocol/bircd.c (File Modified) 
  +23 -3	trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 17:28:49 UTC	(20060119-4591)
  Log:
  If logging in as another user without logging out explicitly first,
  still do an ircd_on_logout(). (In P10, this will kill the user.)
  

  Changes:	Modified:
  +3 -0		trunk/modules/nickserv/identify.c (File Modified) 
  +3 -0		trunk/modules/userserv/login.c (File Modified) 


jilles      2006/01/19 17:22:13 UTC	(20060119-4589)
  Log:
  P10: Rewrote m_nick(), now copes with the extensibility
  better and recognizes logins.
  

  Changes:	Modified:
  +17 -65	trunk/protocol/asuka.c (File Modified) 
  +17 -65	trunk/protocol/bircd.c (File Modified) 
  +17 -65	trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 16:38:34 UTC	(20060119-4587)
  Log:
  Go back to non-P10 mode on reconnect (so it reconnects
  properly after /squit services.).
  

  Changes:	Modified:
  +1 -0		trunk/protocol/asuka.c (File Modified) 
  +1 -0		trunk/protocol/bircd.c (File Modified) 
  +1 -0		trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 16:25:49 UTC	(20060119-4585)
  Log:
  Add a return value to ircd_on_logout().
  If the return value is TRUE, the user was killed to force the logout (P10).