@@ -1,3 +1,15 @@
+jilles      2006/01/19 21:43:00 UTC	(20060119-4599)
+  Log:
+  Need to send mode changes from the server if the setter is
+  not on channel (for /os mode &c).
+  
+
+  Changes:	Modified:
+  +4 -1		trunk/protocol/asuka.c (File Modified) 
+  +4 -1		trunk/protocol/bircd.c (File Modified) 
+  +4 -1		trunk/protocol/undernet.c (File Modified) 
+
+
 jilles      2006/01/19 21:35:55 UTC	(20060119-4597)
   Log:
   Add cmode +N (no notices/wallchops).
